# grpc-chat

proto/: chat.proto
server/: Cargo.toml  build.rs
server/chat_rpc/: chat.rs
server/src/: data.rs  lib.rs  main.rs  server.rs  service.rs
server/tests/api/: chat.rs  helpers.rs  main.rs
